# datathon-kit

./: .gitignore  Makefile  README.md  index.html  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/: automl.py
notebooks/: sandbox.ipynb  skrub.ipynb
src/: data.py  datasets.py  features.py
src/dttk/: data.py  features.py
