[project]
name = "datathon-kit"
version = "1.0.0"
description = "A set of opinionated tools, code, and workflows for Machine Learning projects"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "httpx>=0.28.1",
    "lightgbm>=4.5.0",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.3",
]
