[project]
name = "datathon-kit"
version = "1.0.0"
description = "A set of opinionated tools, code, and workflows for Machine Learning projects"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "flaml>=2.3.4",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "optuna>=4.3.0",
    "optuna-integration[lightgbm]>=4.3.0",
    "perpetual>=0.9.2",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "skrub>=0.5.3",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
