[project]
name = "dttk"
version = "0.0.0"
description = "A set of opinionated tools, code, and workflows for quick and dirty Machine Learning projects"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "autogluon>=1.3.1",
    "category-encoders>=2.8.1",
    "feature-engine>=1.8.3",
    "flaml>=2.3.4",
    "httpx>=0.28.1",
    "polars>=1.30.0",
    "pyarrow>=17.0.0",
    "pytorch-triton-rocm>=3.3.0",
    "scikit-learn>=1.6.1",
    "skrub[transformers]>=0.5.3",
    "tabpfn>=2.0.9",
    "tabpfn-extensions>=0.0.4",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]

[tool.uv]
override-dependencies = ["torch>=2.6.0", "torchvision>=0.21.0"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[build-system]
requires = ["uv_build>=0.6.14,<0.7"]
build-backend = "uv_build"
